# Solar-cell

./: README.md  pyproject.toml  test.csv
solarcell/: pyproject.toml
solarcell/src/solarcell/: controller.py  model.py
