[tool.poetry]
name = "solarcell"
version = "0.1.0"
description = ""
authors = ["dienejg1 <dienejg@gmail.com>"]
readme = "README.md"
packages = [{include = "solarcell", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyvisa = "^1.12.0"
numpy = "^1.23.5"
pyside6 = "^6.4.1"
pyqtgraph = "^0.13.1"
pandas = "^1.5.2"
pyvisa-py = "^0.5.3"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
